LGBM model got 0.7952

--- a/Spaceship_Titanic/notebooks/featureEngineering.ipynb
+++ b/Spaceship_Titanic/notebooks/featureEngineering.ipynb
@@ -854,6 +854,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b4e537a",
+   "metadata": {},
+   "source": [
+    "**Save Final Datasets**\n",
+    "\n",
+    "Now that feature engineering and cleaning are complete, we export the transformed `train` and `test` datasets as CSV files for use in the modeling notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "8a4da709",
