recleaning half way through

--- a/Spaceship_Titanic/notebooks/data_cleaning.ipynb
+++ b/Spaceship_Titanic/notebooks/data_cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "c62dcf70",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "f156cc21",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "2d0d2a43",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "365     0402_01    0402  D/15/S        NaN               None"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "326094e2",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "aea7f4bb",
    "metadata": {},
    "outputs": [],
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "c9e582fa",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "956b9730",
    "metadata": {},
    "outputs": [],
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "0c537aca",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "88218260",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "5d40b0f4",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,14 +612,278 @@
     "\n",
     "- Flag those 136 rows as a LikelyBudgetPassenger\n",
     "\n",
-    "- Investigate the 163 rows that have no cabin but used amenities - might reveal data noise or shared cabins?"
+    "- Investigate the 163 rows that have no cabin but used amenities - might reveal data noise or shared cabins?\n",
+    "\n",
+    "Step 1: Flag Obvious Budget Passengers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ec808813",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined['LikelyBudgetPassenger'] = (\n",
+    "    (combined['Cabin_missing'] == 1) &\n",
+    "    (combined['NoAmenities'] == 1) &\n",
+    "    (combined['CryoSleep'] == True)\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2a89a5f3",
+   "id": "4624d766",
    "metadata": {},
-   "source": []
+   "source": [
+    "Step 2: Investigate the Oddballs\n",
+    "\n",
+    "People with:\n",
+    "\n",
+    "- Cabin missing\n",
+    "\n",
+    "- Used amenities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0e0db1ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    PassengerId  RoomService  FoodCourt  ShoppingMall     Spa  VRDeck GroupID  \\\n",
+      "15      0012_01         32.0        0.0         876.0     0.0     0.0    0012   \n",
+      "103     0110_01          0.0      410.0           6.0  3929.0   764.0    0110   \n",
+      "222     0239_01        637.0        0.0           0.0    92.0   319.0    0239   \n",
+      "251     0278_01          0.0        0.0           0.0   888.0     NaN    0278   \n",
+      "280     0310_01          NaN      230.0           0.0  4476.0   241.0    0310   \n",
+      "295     0327_01         17.0        0.0         784.0     0.0     2.0    0327   \n",
+      "314     0348_02        520.0        0.0        1865.0     0.0     0.0    0348   \n",
+      "462     0502_01         10.0        0.0         817.0   471.0     0.0    0502   \n",
+      "699     0732_01          0.0      714.0           2.0     0.0     0.0    0732   \n",
+      "785     0823_02          0.0        0.0         739.0     0.0     0.0    0823   \n",
+      "\n",
+      "    Cabin  \n",
+      "15    NaN  \n",
+      "103   NaN  \n",
+      "222   NaN  \n",
+      "251   NaN  \n",
+      "280   NaN  \n",
+      "295   NaN  \n",
+      "314   NaN  \n",
+      "462   NaN  \n",
+      "699   NaN  \n",
+      "785   NaN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "odd_cabinless = combined[(combined['Cabin_missing'] == 1) & (combined['NoAmenities'] == 0)]\n",
+    "print(odd_cabinless[['PassengerId', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck', 'GroupID', 'Cabin']].head(10))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25657a46",
+   "metadata": {},
+   "source": [
+    "These 10 Are Not Budget Passengers\n",
+    "They used amenities (some heavily), yet still have Cabin == NaN.\n",
+    "\n",
+    "So they're:\n",
+    "\n",
+    "- Not cryo-sleepers\n",
+    "\n",
+    "- Spent money\n",
+    "\n",
+    "- Some have full luxury packages\n",
+    "\n",
+    "- Still no assigned cabin\n",
+    "\n",
+    "This is weird. It could mean:\n",
+    "\n",
+    "- They had a cabin, but it wasn't recorded properly\n",
+    "\n",
+    "- They're edge cases: rich but unassigned? teleported? admin glitch?\n",
+    "\n",
+    "Step 3 — Group-Based Cabin Imputation\n",
+    "\n",
+    "Infer Cabin using others in the same group who do have one.\n",
+    "\n",
+    "- Do Shared Surnames Correlate with Cabin Similarities?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "33a3e65e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing Cabins potentially inferrable by surname: 292\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Extract surname from Name\n",
+    "combined['Surname'] = combined['Name'].str.split().str[-1]\n",
+    "\n",
+    "# For surnames with more than one person and at least one valid Cabin\n",
+    "surname_cabin_groups = (\n",
+    "    combined[~combined['Cabin'].isna()]\n",
+    "    .groupby('Surname')['Cabin']\n",
+    "    .agg(lambda x: x.mode()[0] if len(set(x)) == 1 else np.nan)\n",
+    ")\n",
+    "\n",
+    "# Check how many missing Cabin rows could get filled by surname\n",
+    "inferred_by_surname = (\n",
+    "    combined['Cabin'].isna() &\n",
+    "    combined['Surname'].isin(surname_cabin_groups.index)\n",
+    ")\n",
+    "\n",
+    "print(f\"Missing Cabins potentially inferrable by surname: {inferred_by_surname.sum()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45e03d27",
+   "metadata": {},
+   "source": [
+    "Wow... Yeh they do.\n",
+    "\n",
+    "Yep - 292 missing cabins potentially inferrable from surname. That’s nearly the full missing set.\n",
+    "\n",
+    "That tells us:\n",
+    "\n",
+    "- A large chunk of missing Cabin values likely come from duplicated entries within families.\n",
+    "\n",
+    "- They aren't noise - they’re structured, and we can recover them cleanly.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ee69412b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remaining missing Cabins: 270\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fill in missing Cabin values using surname inference\n",
+    "combined['Cabin'] = combined.apply(\n",
+    "    lambda row: surname_cabin_groups[row['Surname']]\n",
+    "    if pd.isna(row['Cabin']) and row['Surname'] in surname_cabin_groups and pd.notna(surname_cabin_groups[row['Surname']])\n",
+    "    else row['Cabin'],\n",
+    "    axis=1\n",
+    ")\n",
+    "\n",
+    "print(f\"Remaining missing Cabins: {combined['Cabin'].isna().sum()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b235b321",
+   "metadata": {},
+   "source": [
+    "Interpreting the Remaining 270:\n",
+    "\n",
+    "These passengers don’t share a surname with any known Cabin.\n",
+    "\n",
+    "They’re either:\n",
+    "\n",
+    "- Solo travelers,\n",
+    "\n",
+    "- One-off names,\n",
+    "\n",
+    "- Or from groups where no member has a known Cabin.\n",
+    "\n",
+    "We’re basically out of info to confidently infer more. Time to flag the remaining as 'Unknown'\n",
+    "\n",
+    "Step 4: Flag and Fill in the remaining Missing Cabins with Unknown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8bded89c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remaining missing Cabins: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a binary missing flag\n",
+    "combined['Cabin_missing'] = combined['Cabin'].isna().astype(int)\n",
+    "\n",
+    "# Fill remaining NaNs as 'Unknown' (so that downstream models don't choke)\n",
+    "combined['Cabin'] = combined['Cabin'].fillna('Unknown')\n",
+    "\n",
+    "print(f\"Remaining missing Cabins: {combined['Cabin'].isna().sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b348c0d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Missing Values:\n",
+      "Transported              4277\n",
+      "CryoSleep                 310\n",
+      "ShoppingMall              306\n",
+      "VIP                       296\n",
+      "Name                      294\n",
+      "Surname                   294\n",
+      "FoodCourt                 289\n",
+      "Spa                       284\n",
+      "Destination               274\n",
+      "Age                       270\n",
+      "VRDeck                    268\n",
+      "RoomService               263\n",
+      "Cabin                       0\n",
+      "PassengerId                 0\n",
+      "HomePlanet                  0\n",
+      "is_train                    0\n",
+      "GroupID                     0\n",
+      "CabinNum                    0\n",
+      "CabinDeck                   0\n",
+      "CabinSide                   0\n",
+      "Cabin_missing               0\n",
+      "NoAmenities                 0\n",
+      "LikelyBudgetPassenger       0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nMissing Values:\")\n",
+    "print(combined.isnull().sum().sort_values(ascending=False))"
+   ]
   }
  ],
  "metadata": {
