feature engineering, toubleshooting model.fit and trying to find the leaks

--- a/Commodity_Prediction/notebooks/feature_Engineering.ipynb
+++ b/Commodity_Prediction/notebooks/feature_Engineering.ipynb
@@ -423,6 +423,17 @@
     "plt.title(\"Feature Correlation Matrix\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cedaf37c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export full training-ready dataset\n",
+    "base_df.to_csv('../data/target2_features.csv', index=False)\n"
+   ]
   }
  ],
  "metadata": {
