much learned from modeling. baseline ready

--- a/Commodity_Prediction/notebooks/data_Explorer.ipynb
+++ b/Commodity_Prediction/notebooks/data_Explorer.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "19575287",
    "metadata": {},
    "outputs": [
@@ -331,14 +331,14 @@
     }
    ],
    "source": [
-    "# Step: Missing values per feature\n",
+    "# Missing values per feature\n",
     "missing_counts = merged_df.isna().sum().sort_values(ascending=False)\n",
     "missing_counts.head(10)  # Preview top 10 features with the most NaNs\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b46c1703",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
     }
    ],
    "source": [
-    "# Step: Detect constant (zero-variance) features\n",
+    "# Detect constant (zero-variance) features\n",
     "nunique = merged_df.nunique()\n",
     "constant_cols = nunique[nunique <= 1].index.tolist()\n",
     "constant_cols[:10]  # Show a few if they exist\n"
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "94016841",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
     }
    ],
    "source": [
-    "# Step: Find strongest features (by absolute correlation with next-day target)\n",
+    "# Find strongest features (by absolute correlation with next-day target)\n",
     "correlation_with_target = (\n",
     "    merged_df.drop(columns=['target_2', 'date_id'])\n",
     "    .corrwith(merged_df['target_2_shifted'])\n",
